{
  "version": 4,
  "terraform_version": "1.15.4",
  "serial": 22,
  "lineage": "6944b193-a87f-c38a-2dcd-c723e44ccb94",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076124125546:route-table/rtb-0514ad7a2cb0ad2c9",
            "id": "rtb-0514ad7a2cb0ad2c9",
            "owner_id": "076124125546",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "development",
              "Name": "main-route-table"
            },
            "tags_all": {
              "Environment": "development",
              "Managed_By": "Terraform",
              "Name": "main-route-table",
              "Project": "Terraform Training"
            },
            "timeouts": null,
            "vpc_id": "vpc-09facb55f509e35a3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0047de90f94b3789d",
            "route_table_id": "rtb-0514ad7a2cb0ad2c9",
            "subnet_id": "subnet-089e21b9488743c36"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.main",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0acbe0621abc0746f",
            "route_table_id": "rtb-0514ad7a2cb0ad2c9",
            "subnet_id": "subnet-0a0ece1abec119bc2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076124125546:security-group/sg-0e9b0b7a5f6cb1ae4",
            "description": "Example security group for our VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e9b0b7a5f6cb1ae4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP (80)",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS (443)",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "example-security-group",
            "name_prefix": "",
            "owner_id": "076124125546",
            "revoke_rules_on_delete": true,
            "tags": {
              "Environment": "development",
              "Name": "example-security-group"
            },
            "tags_all": {
              "Environment": "development",
              "Managed_By": "Terraform",
              "Name": "example-security-group",
              "Project": "Terraform Training"
            },
            "timeouts": null,
            "vpc_id": "vpc-09facb55f509e35a3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTP (80)",
            "from_port": 80,
            "id": "sgrule-3225661995",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e9b0b7a5f6cb1ae4",
            "security_group_rule_id": "sgr-07d4c7b4f9e87acaf",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.example",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTPS (443)",
            "from_port": 443,
            "id": "sgrule-4114386296",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e9b0b7a5f6cb1ae4",
            "security_group_rule_id": "sgr-0b55640122c88f186",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.example",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow SSH (22)",
            "from_port": 22,
            "id": "sgrule-1992945566",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e9b0b7a5f6cb1ae4",
            "security_group_rule_id": "sgr-0aa160f3d9fe61f24",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.example",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic",
            "from_port": 0,
            "id": "sgrule-2823479914",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e9b0b7a5f6cb1ae4",
            "security_group_rule_id": "sgr-0c9613120dd00cfda",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.example",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076124125546:subnet/subnet-089e21b9488743c36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089e21b9488743c36",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "076124125546",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "Name": "private-subnet"
            },
            "tags_all": {
              "Environment": "development",
              "Managed_By": "Terraform",
              "Name": "private-subnet",
              "Project": "Terraform Training"
            },
            "vpc_id": "vpc-09facb55f509e35a3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076124125546:subnet/subnet-0a0ece1abec119bc2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0ece1abec119bc2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "076124125546",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "Name": "public-subnet"
            },
            "tags_all": {
              "Environment": "development",
              "Managed_By": "Terraform",
              "Name": "public-subnet",
              "Project": "Terraform Training"
            },
            "vpc_id": "vpc-09facb55f509e35a3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076124125546:vpc/vpc-09facb55f509e35a3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05ae6bc91da6b0293",
            "default_route_table_id": "rtb-0267f8f46684483e9",
            "default_security_group_id": "sg-00937c5964af4007c",
            "dhcp_options_id": "dopt-0200c4fdad2f1f246",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09facb55f509e35a3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0267f8f46684483e9",
            "owner_id": "076124125546",
            "tags": {
              "Environment": "development",
              "Name": "terraform-course"
            },
            "tags_all": {
              "Environment": "development",
              "Managed_By": "Terraform",
              "Name": "terraform-course",
              "Project": "Terraform Training"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}